# resume-extraction

./: .env.example  Pipfile  README.md  download_nltk_data.py  pyproject.toml  requirements.txt  vercel.json
app/: main.py
app/configs/: app_config.py
app/databases/: mongo_db.py  mongodb.py
app/enums/: role.py
app/exceptions/: exception_handler.py
app/models/: collections.py  profile.py  requests.py  responses.py
app/models/collections/: job_seeker.py  mongo_base_model.py
app/models/requests/: job_seeker_request.py
app/models/responses/: base_response.py  job_seeker_response.py
app/repositories/: job_seeker_repository.py  recruiter_repository.py  skill_repository.py
app/routers/: __init__.py  job_seeker_router.py  profile_router.py  recruiter_router.py  resume_router.py  skill_router.py
app/services/: __init__.py  job_seeker_service.py  profile_service.py  recruiter_service.py  resume_service.py  skill_service.py
app/utils/: datetime_util.py  jwt_util.py  password_util.py  storage_util.py
docs/: technical-document.md
docs/sequence-diagrams/: extract-candidate-profile.txt  login-as-job-seeker.txt  login-as-recruiter.txt  register-account-as-job-seeker.txt  search-resume-by-skill.txt  upload-resume.txt  view-applicant-profile-by-each-resume.txt  view-parsed-resume.txt  view-structured-data-by-each-resume.txt
docs/system-architecture/: system-architecture.drawio
src/: main.py
