[tool.poetry]
name = "resume-extraction"
version = "0.1.0"
description = ""
authors = ["Phutthiphat Tatiyawongsoonthorn <supphasithut@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.9.19"
fastapi = {extras = ["standard"], version = "^0.114.2"}
pyresparser = "^1.0.6"
spacy = "2.3.5"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz"}
nltk = "^3.9.1"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
pymongo = "^4.8.0"
motor = "^3.5.1"
pydantic-settings = "^2.5.2"
numpy = "1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
